Footer padding aangepast + footer benaming

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                     <span><a href="#portfolio">PORTFOLIO</a></span>
                     <span><a href="#contact">CONTACT</a></span>
                  </p>
-                <a href="">Copyright © martijngerritsen.online | Alle rechten zijn gereserveerd.</a>
+                <a href="">Copyright © martijngerritsen.online | Alle rechten voorbehouden.</a>
             </div>
         </div>
     </footer>                  
