Tekst aangepast site.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h5>Hallo! Ik ben</h5>
                         <h2>Martijn Gerritsen</h2>
                         <span>Student <a>HBO-ICT</a> </span>
-                        <p>Op deze website laat ik zien wie ik ben en wat ik doe.</p>
+                        <p>Leuk dat je kijkt op mijn website! Op deze website laat ik zien wie ik ben en wat ik doe. Ook laat ik mijn vaardigheden en skills zien. Onderaan kan je contact opzoeken met mij.</p>
 
                         <ul class="socil-icon">
                             <li>
@@ -174,7 +174,7 @@
             <div class="col-md-6 skii-div tech-skill">
                 <div class="title">
                     <h2>Technical Skill</h2>
-                    <p>There are many variations available but the majority</p>
+                    <p>Programmeertalen die ik beheers</p>
                 </div>
 
                 <ul>
