Ongebruikte images verwijderd + foto's portfolio toegevoegd + contact form detail toegevoegd

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <div class="container">
                 <div class="row home-detail">
                     <div class="col-md-5 animated bounceInLeft hom-img">
-                        <img src="images/profielfoto_transparant_2.png" alt="">
+                        <img src="images/profielfoto_transparant.png" alt="">
                     </div>
                     <div class="col-md-7 animated bounceInRight homexp">
                         <h5>Hallo! Ik ben</h5>
                         <h2>Martijn Gerritsen</h2>
                         <span>Student <a>HBO-ICT</a> </span>
-                        <p>Leuk dat je kijkt op mijn website! Op deze website laat ik zien wie ik ben en wat ik doe. Ook laat ik mijn vaardigheden en skills zien. Onderaan kan je contact opzoeken met mij.</p>
+                        <p>Leuk dat je kijkt op mijn website! Ik ben een student aan de HAN, gespecialiseerd in het profiel 'Software Development'. Op deze website laat ik zien wie ik ben en wat ik doe. Ook laat ik mijn vaardigheden en skills zien. Onderaan kan je contact opzoeken met mij.</p>
 
                         <ul class="socil-icon">
                             <li>
@@ -69,12 +69,12 @@
         <div class="container">
             <div class="session-title row">
                 <h2>Over Mij</h2>
-                <p>Ik zal in het kort vertellen wie ik ben aan de hand van de tabellen hieronder.</p>
+                <p>Ik ben Martijn Gerritsen, 21 jaar oud uit Apeldoorn. Ik studeer in Arnhem op de HAN (Hogeschool van Arnhem en Nijmegen). Momenteel zit ik in mijn 3e jaar en ben ik stage aan het lopen.</p>
                 <div class="heading-line"></div>
             </div>
             <div class="about-row row">
                 <div class="image-col col-md-4">
-                    <img src="images/profielfoto_transparant_2_klein.png" alt="">
+                    <img src="images/profielfoto_transparant_klein.png" alt="">
                     <button type="submit"  onclick="window.location.href='images/cv.png'" class="btn btn-primary"><i class="fas fa-download"></i> Download CV</button>
                     
                 </div>
@@ -87,7 +87,7 @@
                             <div class="info-list">
                                 <ul>
                                     <li><span>Geboortedatum:</span>04-12-2000</li>
-                                    <li><span>Stad:</span>Apeldoorn</li>
+                                    <li><span>Geboorteplaats:</span>Apeldoorn</li>
                                     <li><span>Studie:</span>HBO-ICT</li>
                                     <li><span>Website:</span>www.martijngerritsen.online</li>
                                 </ul>
@@ -114,7 +114,7 @@
         <div class="container">
             <div class="session-title row">
                 <h2>Mijn vaardigheden</h2>
-                <p>Tijdens mijn studie ben ik bezig geweest om verschillende vaardigheden te leren.</p>
+                <p>Tijdens mijn studie ben ik bezig geweest om verschillende vaardigheden te leren. Zie hieronder de belangrijkste vaardigheden.</p>
                 <div class="heading-line"></div>
             </div>
             <div class="services-row row">
@@ -246,7 +246,6 @@
     </div>
 
 
-
     <!--  ************************* Gallery Starts Here ************************** -->
     <div id="portfolio" class="gallery">
         <div class="container">
@@ -258,41 +257,35 @@
             <div class="row">
 
 
-
-
+                <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter hdpe">
+                    <img src="images/gallery/belastingdienst_retro.png" class="img-responsive">
+                </div>
 
                 <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter hdpe">
-                    <img src="images/gallery/gallery_01.jpg" class="img-responsive">
+                    <img src="images/gallery/propedeuse.png" class="img-responsive">
+                </div>
+
+                <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter irrigation">
+                    <img src="images/gallery/database_cdm.png" class="img-responsive">
                 </div>
 
                 <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter sprinkle">
-                    <img src="images/gallery/gallery_02.jpg" class="img-responsive">
-                </div>
-
-                <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter hdpe">
-                    <img src="images/gallery/gallery_03.jpg" class="img-responsive">
-                </div>
-
-                <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter irrigation">
-                    <img src="images/gallery/gallery_04.jpg" class="img-responsive">
+                    <img src="images/gallery/propedeuse_ondertekenen.png" class="img-responsive">
                 </div>
 
                 <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter spray">
-                    <img src="images/gallery/gallery_05.jpg" class="img-responsive">
+                    <img src="images/gallery/klassendiagram.png" class="img-responsive">
                 </div>
-
-
-
                 <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter spray">
-                    <img src="images/gallery/gallery_06.jpg" class="img-responsive">
+                    <img src="images/gallery/cyclus_scrum.png" class="img-responsive">
                 </div>
 
                 <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter irrigation">
-                    <img src="images/gallery/gallery_09.jpg" class="img-responsive">
+                    <img src="images/gallery/website.png" class="img-responsive">
                 </div>
 
                 <div class="gallery_product col-lg-3 col-md-4 col-sm-3 col-xs-6 filter irrigation">
-                    <img src="images/gallery/gallery_08.jpg" class="img-responsive">
+                    <img src="images/gallery/code_js.png" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -308,25 +301,29 @@
             <div  class="col-sm-6 cop-ck">
                 <h2 >Contacteer me</h2>
                     <div class="row cf-ro">
-                        <div  class="col-sm-3"><label>Naam :</label></div>
+                        <div class="col-sm-3"><label>Naam:</label></div>
                         <div class="col-sm-8"><input type="text" placeholder="Voer uw naam in" name="name" class="form-control input-sm"  ></div>
                     </div>
-                    <div  class="row cf-ro">
-                        <div  class="col-sm-3"><label>Emailadres :</label></div>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Emailadres:</label></div>
                         <div class="col-sm-8"><input type="text" name="name" placeholder="Voer uw emailadres in" class="form-control input-sm"  ></div>
                     </div>
-                     <div  class="row cf-ro">
-                        <div  class="col-sm-3"><label>Telefoonnummer :</label></div>
+                     <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Telefoonnummer:</label></div>
                         <div class="col-sm-8"><input type="text" name="name" placeholder="Voer uw telefoonnummer in" class="form-control input-sm"  ></div>
                     </div>
-                     <div  class="row cf-ro">
-                        <div  class="col-sm-3"><label>Je bericht :</label></div>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Onderwerp:</label></div>
+                        <div class="col-sm-8"><input type="text" name="name" placeholder="Voer uw onderwerp in" class="form-control input-sm"  ></div>
+                    </div>
+                     <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Je bericht :</label></div>
                         <div class="col-sm-8">
                           <textarea rows="5" placeholder="Typ hier uw bericht" class="form-control input-sm"></textarea>
                         </div>
                     </div>
-                     <div  class="row cf-ro">
-                        <div  class="col-sm-3"><label></label></div>
+                     <div class="row cf-ro">
+                        <div class="col-sm-3"><label></label></div>
                         <div class="col-sm-8">
                          <button class="btn btn-primary btn-sm">Verstuur bericht</button>
                         </div>
