--- a/index.html
+++ b/index.html
@@ -292,45 +292,38 @@
     </div>
     <!-- ######## Gallery End ####### -->
 
-    <section id="contact" class="contact-us-single">
+    <form id="contact" class="contact-us-single" action="php/contact.php" method="post">
         <div class="row no-margin">
-            <!-- <div class="col-sm-6 no-padding">
-                 <iframe style="width:100%" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d249759.19784092825!2d79.10145254589841!3d12.009924873581818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1448883859107"  height="480" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div> -->
             <div class="col-sm-6 no-padding"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Apeldoorn&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
-            <div  class="col-sm-6 cop-ck">
+            <div class="col-sm-6 cop-ck">
                 <h2 >Contacteer me</h2>
                     <div class="row cf-ro">
-                        <div class="col-sm-3"><label>Naam:</label></div>
-                        <div class="col-sm-8"><input type="text" placeholder="Voer uw naam in" name="name" class="form-control input-sm"  ></div>
+                        <div class="col-sm-3"><label>Voornaam:</label></div>
+                        <div class="col-sm-8"><input type="text" placeholder="Voer uw naam in" name="first_name" class="form-control input-sm"  ></div>
+                    </div>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Achternaam:</label></div>
+                        <div class="col-sm-8"><input type="text" placeholder="Voer uw naam in" name="last_name" class="form-control input-sm"  ></div>
                     </div>
                     <div class="row cf-ro">
                         <div class="col-sm-3"><label>Emailadres:</label></div>
-                        <div class="col-sm-8"><input type="text" name="name" placeholder="Voer uw emailadres in" class="form-control input-sm"  ></div>
+                        <div class="col-sm-8"><input type="text" name="email" placeholder="Voer uw emailadres in" class="form-control input-sm"  ></div>
                     </div>
                      <div class="row cf-ro">
-                        <div class="col-sm-3"><label>Telefoonnummer:</label></div>
-                        <div class="col-sm-8"><input type="text" name="name" placeholder="Voer uw telefoonnummer in" class="form-control input-sm"  ></div>
-                    </div>
-                    <div class="row cf-ro">
-                        <div class="col-sm-3"><label>Onderwerp:</label></div>
-                        <div class="col-sm-8"><input type="text" name="name" placeholder="Voer uw onderwerp in" class="form-control input-sm"  ></div>
-                    </div>
-                     <div class="row cf-ro">
-                        <div class="col-sm-3"><label>Je bericht :</label></div>
+                        <div class="col-sm-3"><label>Je bericht:</label></div>
                         <div class="col-sm-8">
-                          <textarea rows="5" placeholder="Typ hier uw bericht" class="form-control input-sm"></textarea>
+                          <textarea rows="5" name="message" placeholder="Typ hier uw bericht" class="form-control input-sm"></textarea>
                         </div>
                     </div>
                      <div class="row cf-ro">
                         <div class="col-sm-3"><label></label></div>
                         <div class="col-sm-8">
-                         <button class="btn btn-primary btn-sm">Verstuur bericht</button>
+                         <button type="submit" name="submit" class="btn btn-primary btn-sm">Verstuur bericht</button>
                         </div>
                 </div>
             </div>
         </div>
-    </section>   
+    </form>   
     
                       
     <!--  ************************* Footer  Starts Here ************************** -->
