--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="service-card">
                         <i class="fas fa-infinity"></i>
                         <h4>Dev-Ops</h4>
-                        <p>Binnenkort ga ik een minor volgen over DevOps. Dit is een eigenschap die veel werkgevers
+                        <p>Binnenkort ga ik een minor volgen over DevOps. Dit is een vaardigheid die veel werkgevers
                             vragen en ik interessant vind. Binnenkort zal ik hier meer over gaan leren.</p>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                     <img src="images/gallery/website.png" class="img-responsive">
                 </div>
 
-                <div class="gallery_product col-lg-3 col-md-4 col-sm-3 col-xs-6 filter irrigation">
+                <div class="gallery_product col-lg-3 col-md-3 col-sm-4 col-xs-6 filter irrigation">
                     <img src="images/gallery/code_js.png" class="img-responsive">
                 </div>
             </div>
@@ -308,23 +308,23 @@
                 <div class="row cf-ro">
                     <div class="col-sm-3"><label>Voornaam:</label></div>
                     <div class="col-sm-8"><input type="text" placeholder="Voer uw voornaam in" name="first_name"
-                            class="form-control input-sm"></div>
+                            class="form-control input-sm" required></div>
                 </div>
                 <div class="row cf-ro">
                     <div class="col-sm-3"><label>Achternaam:</label></div>
                     <div class="col-sm-8"><input type="text" placeholder="Voer uw achternaam in" name="last_name"
-                            class="form-control input-sm"></div>
+                            class="form-control input-sm" required></div>
                 </div>
                 <div class="row cf-ro">
                     <div class="col-sm-3"><label>Emailadres:</label></div>
                     <div class="col-sm-8"><input type="text" name="email" placeholder="Voer uw emailadres in"
-                            class="form-control input-sm"></div>
+                            class="form-control input-sm" required></div>
                 </div>
                 <div class="row cf-ro">
                     <div class="col-sm-3"><label>Je bericht:</label></div>
                     <div class="col-sm-8">
                         <textarea rows="5" name="message" placeholder="Typ hier uw bericht"
-                            class="form-control input-sm"></textarea>
+                            class="form-control input-sm" required></textarea>
                     </div>
                 </div>
                 <div class="row cf-ro">
