leeftijd aangepast + .online naar .com

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="session-title row">
                 <h2>Over Mij</h2>
-                <p>Ik ben Martijn Gerritsen, 21 jaar oud uit Apeldoorn. Ik studeer in Arnhem op de HAN (Hogeschool van
+                <p>Ik ben Martijn Gerritsen, 22 jaar oud uit Apeldoorn. Ik studeer in Arnhem op de HAN (Hogeschool van
                     Arnhem en Nijmegen). Momenteel zit ik in mijn 3e jaar en ben ik stage aan het lopen.</p>
                 <div class="heading-line"></div>
             </div>
@@ -100,9 +100,9 @@
                         <div class="col-md-6 col-12">
                             <div class="info-list">
                                 <ul>
-                                    <li><span>Leeftijd:</span>21 jaar</li>
+                                    <li><span>Leeftijd:</span>22 jaar</li>
                                     <li><span>Studiejaar:</span>3e jaars</li>
-                                    <li><span>Mail:</span>mail@martijngerritsen.online</li>
+                                    <li><span>Mail:</span>martijn.gerritsen@kpnmail.nl</li>
                                     <li><span>Phone:</span>+31 649224942</li>
                                 </ul>
                             </div>
@@ -348,7 +348,7 @@
                     <span><a href="#portfolio">PORTFOLIO</a></span>
                     <span><a href="#contact">CONTACT</a></span>
                 </p>
-                <a href="">Copyright © martijngerritsen.online | Alle rechten voorbehouden.</a>
+                <a href="">Copyright © martijngerritsen.com | Alle rechten voorbehouden.</a>
             </div>
         </div>
     </footer>
