--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="session-title row">
                 <h2>Over Mij</h2>
                 <p>Ik ben Martijn Gerritsen, 22 jaar oud uit Apeldoorn. Ik studeer in Arnhem op de HAN (Hogeschool van
-                    Arnhem en Nijmegen). Momenteel zit ik in mijn 3e jaar en ben ik stage aan het lopen.</p>
+                    Arnhem en Nijmegen). Momenteel zit ik in mijn 3e jaar en ben ik stage aan het lopen. Dit vind ik erg leuk.</p>
                 <div class="heading-line"></div>
             </div>
             <div class="about-row row">
