Website informatie geupdate

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="session-title row">
                 <h2>Over Mij</h2>
-                <p>Ik ben Martijn Gerritsen, 22 jaar oud uit Apeldoorn. Ik studeer in Arnhem op de HAN (Hogeschool van
-                    Arnhem en Nijmegen). Momenteel zit ik in mijn 3e jaar en ben ik stage aan het lopen. Dit vind ik erg leuk.</p>
+                <p>Ik ben Martijn Gerritsen, 23 jaar oud uit Apeldoorn. Ik studeer in Arnhem op de HAN (Hogeschool van
+                    Arnhem en Nijmegen). Momenteel zit ik in mijn 4e jaar en ga ik binnenkort mijn studie afronden.</p>
                 <div class="heading-line"></div>
             </div>
             <div class="about-row row">
@@ -93,15 +93,15 @@
                                     <li><span>Geboortedatum:</span>04-12-2000</li>
                                     <li><span>Geboorteplaats:</span>Apeldoorn</li>
                                     <li><span>Studie:</span>HBO-ICT</li>
-                                    <li><span>Website:</span>www.martijngerritsen.online</li>
+                                    <li><span>Website:</span>www.martijngerritsen.com</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-6 col-12">
                             <div class="info-list">
                                 <ul>
-                                    <li><span>Leeftijd:</span>22 jaar</li>
-                                    <li><span>Studiejaar:</span>3e jaars</li>
+                                    <li><span>Leeftijd:</span>23 jaar</li>
+                                    <li><span>Studiejaar:</span>4e jaars</li>
                                     <li><span>Mail:</span>martijn.gerritsen@kpnmail.nl</li>
                                     <li><span>Phone:</span>+31 649224942</li>
                                 </ul>
@@ -167,8 +167,8 @@
                     <div class="service-card">
                         <i class="fas fa-infinity"></i>
                         <h4>Dev-Ops</h4>
-                        <p>Binnenkort ga ik een minor volgen over DevOps. Dit is een vaardigheid die veel werkgevers
-                            vragen en ik interessant vind. Binnenkort zal ik hier meer over gaan leren.</p>
+                        <p>Afgelopen halfjaar heb ik de minor DevOps gevolgd. Dit is een softwareontwikkeling waarbij er samen wordt
+                            gewerkt tussen softwareontwikkeling en productiebeheer. Constante oplevering is een belangrijk onderdeel. </p>
                     </div>
                 </div>
             </div>
