--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         </div>
     </div>
 
-    <form class="contact-us-single" action="https://formspree.io/f/mrgngeqj" method="post" id="contactForm" onsubmit="submitForm(event)">
+    <form class="contact-us-single" action="https://formspree.io/f/xvoeoqqz" method="post" id="contactForm" onsubmit="submitForm(event)">
         <div class="row no-margin">
             <div class="col-sm-6 no-padding"><iframe width="100%" height="600" frameborder="0" scrolling="no"
                     marginheight="0" marginwidth="0"
