Contact ID gewijzigd voor taskbar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <li><a href="#vaardigheden">Vaardigheden</a></li>
                                 <li><a href="#skills">Skills</a></li>
                                 <li><a href="#portfolio">Portfolio</a></li>
-                                <li><a href="#contact">Contact</a></li>
+                                <li><a href="#contactForm">Contact</a></li>
                             </ul>
                         </div>
                     </div>
